documents/examples/good/type_checking/06-17-function_type.latf
int g(int x) {
    return x + 1;
}

int main() {
    [(int) -> int] f = lambda (int x) -> int . x;
    f = g; // OK

    f = lambda (int x) -> int . 2 * x; // OK

    return 0;
}