documents/examples/bad/unknown_identifier2.latf
int main() {
    f(); // error - unknown identifier

    return 0;
}